<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zeyomir.ocfun.view.activity.CachesActivity">

    <item
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/menu_change_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/menu_sort_name" />
            <item
                android:id="@+id/action_sort_distance"
                android:title="@string/menu_sort_distance" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_remove_all"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/menu_remove_all"
        app:showAsAction="never" />

</menu>
